--- a/src/Trace/views/trace/index.html
+++ b/src/Trace/views/trace/index.html
@@ -17,30 +17,29 @@
             </ul>
         </div>
 
-     
+
     </div>
     <div class="portlet light bordered">
         <div class="row">
-         
             <div class="col-xs-8">
                 <div class="form-group form-md-line-input">
                     <label class="col-md-2 control-label">选择系列</label>
                     <div class="col-md-4">
-                        <select ng-model="vm.table.filter.a"
+                        <select ng-model="vm.table.filter.category1"
                                 class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(1)"
-                                ng-class="{'edited':vm.table.filter.a>0}" ng-options="m.id as m.name for m in vm.cate.a"></select>
+                                ng-class="{'edited':vm.table.filter.category1>0}" ng-options="m.id as m.name for m in vm.cate.a"></select>
                         <div class="form-control-focus"> </div>
                     </div>
                     <div class="col-md-3">
-                        <select ng-model="vm.table.filter.b"
+                        <select ng-model="vm.table.filter.category2"
                                 class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(2)"
-                                ng-class="{'edited':vm.table.filter.b>0}" ng-options="m.id as m.name for m in vm.cate.b"></select>
+                                ng-class="{'edited':vm.table.filter.category2>0}" ng-options="m.id as m.name for m in vm.cate.b"></select>
                         <div class="form-control-focus"> </div>
                     </div>
                     <div class="col-md-3">
-                        <select ng-model="vm.table.filter.c"
+                        <select ng-model="vm.table.filter.category3"
                                 class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.table.filter.c>0}" ng-options="m.id as m.name for m in vm.cate.c"></select>
+                                ng-class="{'edited':vm.table.filter.category3>0}" ng-options="m.id as m.name for m in vm.cate.c"></select>
                         <div class="form-control-focus"> </div>
                     </div>
                 </div>
@@ -58,47 +57,9 @@
                 </div>
             </div>
 
-        </div>   <div class="row">
-            <div class="col-xs-8">
-                <div class="form-group form-md-line-input">
-                    <label class="col-md-2 control-label">类别</label>
-                    <div class="col-md-3">
-                        <select ng-model="vm.table.filter.state"
-                                class="form-control edited" ui-validate="'$value>0'" 
-                                ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
-                        <div class="form-control-focus"> </div>
-                    </div>
-                    <div class="col-md-3">
-                        <select ng-model="vm.table.filter.state"
-                                class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
-                        <div class="form-control-focus"> </div>
-                    </div>
-                    <div class="col-md-3">
-                        <select ng-model="vm.table.filter.state"
-                                class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
-                        <div class="form-control-focus"> </div>
-                    </div>
-                </div>
-            </div>
-         
-            <div class="col-xs-4">
-                <div class="form-group form-md-line-input has-info">
-                    <div class="input-group input-group-sm">
-                        <div class="input-group-control">
-                            <input type="text" class="form-control input-sm" placeholder="游迹名称" ng-model="vm.table.filter.name">
-                        </div>
-                        <span class="input-group-btn btn-right">
-                            <button ng-click="vm.init()" class="btn green-haze" type="button">查询</button>
-                        </span>
-                    </div>
-                </div>
-            </div>
-
         </div>
         <div class="row">
-            <table st-table="vm.table.data" class="table table-striped">
+            <table st-table="vm.table.rows" class="table table-striped">
                 <thead>
                     <tr>
                         <th st-sort="a">游迹名称</th>
@@ -106,28 +67,33 @@
                         <th>一级分类</th>
                         <th>二级分类</th>
                         <th>三级分类(系列)</th>
-                        <th>状态</th>
+                        <th>url</th>
+                        <th>图片</th>
                         <th>操作</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.data">
-                        <td>{{row.a}}</td>
-                        <td>{{row.b}}</td>
-                        <td>{{row.c}}</td>
-                        <td>{{row.balance}}</td>
-                        <td>{{row.balance}}</td>
-                        <td>{{row.email}}</td>
+                    <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.rows">
+                        <td>{{row.name}}</td>
+                        <td>2018-01-01</td>
+                        <td>{{row.category1}}</td>
+                        <td>{{row.category2}}</td>
+                        <td>{{row.category3}}</td>
+                        <td>{{row.url}}</td>
+                        <td>{{row.image}}</td>
                         <td>
-                            <button type="button" ng-click="vm.modify(row)" class="btn btn-sm btn-default">
+                            <a href="#" ng-click="vm.edit(row)">
                                 修改
-                            </button>
-                            <button type="button" ng-click="vm.low(row)" class="btn btn-sm btn-warning">
-                                发布
-                            </button>
-                            <button type="button" ng-click="vm.delete(row)" class="btn btn-sm btn-danger">
+                            </a>
+                            <a ng-if="row.status==1" href="#" ng-click="vm.public(row,0)">
+                                下线
+                            </a>
+                            <a ng-if="row.status==0" href="#" ng-click="vm.public(row,1)">
+                                上线
+                            </a>
+                            <a href="#" ng-click="vm.delete(row)">
                                 删除
-                            </button>
+                            </a>
                         </td>
                     </tr>
                 </tbody>
