--- a/src/Trace/views/trace/modify.html
+++ b/src/Trace/views/trace/modify.html
@@ -3,8 +3,8 @@
         <ul class="page-breadcrumb">
             <li>
                 <i class="fa fa-hand-o-right"></i>
-                <a ng-if="!vm.activity.id" href="#">添加游迹</a>
-                <a ng-if="vm.activity.id" href="#">编辑游迹: {{vm.activity.title}}</a>
+                <a ng-if="!vm.trace.id" href="#">添加游迹</a>
+                <a ng-if="vm.trace.id" href="#">编辑游迹: {{vm.trace.name}}</a>
             </li>
         </ul>
     </div>
@@ -18,8 +18,8 @@
                                 <div class="form-group form-md-line-input">
                                     <label class="col-md-3 control-label">游迹名称</label>
                                     <div class="col-md-9">
-                                        <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="游迹名称"
-                                               required ng-model="vm.activity.title">
+                                        <input type="text" class="form-control" ng-class="{'edited':vm.trace.name}" placeholder="游迹名称"
+                                               required ng-model="vm.trace.name">
                                         <div class="form-control-focus"> </div>
                                     </div>
                                 </div>
@@ -29,8 +29,8 @@
                                 <div class="form-group form-md-line-input">
                                     <label class="col-md-3 control-label">游迹URL</label>
                                     <div class="col-md-9">
-                                        <input type="text" class="form-control" ng-class="{'edited':vm.activity.title}" placeholder="游迹"
-                                               required ng-model="vm.activity.title">
+                                        <input type="text" class="form-control" ng-class="{'edited':vm.trace.url}" placeholder="游迹"
+                                               required ng-model="vm.trace.url">
                                     </div>
                                 </div>
 
@@ -42,8 +42,8 @@
                                 <div class="form-group form-md-line-input">
                                     <label class="col-md-5 control-label">一级分类</label>
                                     <div class="col-md-7">
-                                        <select ng-model="vm.activity.cate" class="form-control edited" ui-validate="'$value>0'"
-                                                ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.cates"></select>
+                                        <select ng-model="vm.trace.category1" class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(1)"
+                                                ng-class="{'edited':vm.trace.category1>0}" ng-options="m.id as m.name for m in vm.cate.a"></select>
                                         <div class="form-control-focus"> </div>
                                     </div>
                                 </div>
@@ -52,8 +52,8 @@
                                 <div class="form-group form-md-line-input">
                                     <label class="col-md-5 control-label">二级分类</label>
                                     <div class="col-md-7">
-                                        <select ng-model="vm.activity.cate" class="form-control edited" ui-validate="'$value>0'"
-                                                ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.cates"></select>
+                                        <select ng-model="vm.trace.category2" class="form-control edited" ui-validate="'$value>0'"  ng-change="vm.cate.change(2)"
+                                                ng-class="{'edited':vm.trace.category2>0}" ng-options="m.id as m.name for m in vm.cate.b"></select>
                                         <div class="form-control-focus"> </div>
                                     </div>
                                 </div>
@@ -62,8 +62,8 @@
                                 <div class="form-group form-md-line-input">
                                     <label class="col-md-5 control-label">三级分类</label>
                                     <div class="col-md-7">
-                                        <select ng-model="vm.activity.cate" class="form-control edited" ui-validate="'$value>0'"
-                                                ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.cates"></select>
+                                        <select ng-model="vm.trace.category3" class="form-control edited" ui-validate="'$value>0'"
+                                                ng-class="{'edited':vm.trace.category3>0}" ng-options="m.id as m.name for m in vm.cate.c"></select>
                                         <div class="form-control-focus"> </div>
                                     </div>
                                 </div>
@@ -72,7 +72,7 @@
                     </div>
                     <div class="col-xs-2">
                         <div class="tiles">
-                            <div class="tile bg-grey-steel-opacity" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                            <div class="tile bg-grey-steel-opacity" ng-file-select="vm.file.onFileSelect($files,1)" data-multiple="vm.file.multiple" onclick="this.value = null">
                                 <div class="tile-body">
                                     <i class="fa fa-cloud-upload"></i>
                                 </div>
@@ -95,7 +95,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="modal-footer">
                 <button ng-disabled="vm.saving" type="button" class="btn btn-sm default"  ng-click="vm.cancel()">返回</button>
                 <button type="submit" button-busy="vm.saving" class="btn btn-sm blue" busy-text="保存"
