--- a/src/Trace/views/achievement/medal/index.html
+++ b/src/Trace/views/achievement/medal/index.html
@@ -24,42 +24,31 @@
     </div>
     <div class="portlet light bordered">
         <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-8">
                 <div class="form-group form-md-line-input">
-                    <label class="col-md-2 control-label">类别</label>
-                    <div class="col-md-3">
-                        <select ng-model="vm.table.filter.state"
-                                class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                    <label class="col-md-2 control-label">选择系列</label>
+                    <div class="col-md-4">
+                        <select ng-model="vm.table.filter.a"
+                                class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(1)"
+                                ng-class="{'edited':vm.table.filter.a>0}" ng-options="m.id as m.name for m in vm.cate.a"></select>
                         <div class="form-control-focus"> </div>
                     </div>
                     <div class="col-md-3">
-                        <select ng-model="vm.table.filter.state"
-                                class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                        <select ng-model="vm.table.filter.b"
+                                class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(2)"
+                                ng-class="{'edited':vm.table.filter.b>0}" ng-options="m.id as m.name for m in vm.cate.b"></select>
                         <div class="form-control-focus"> </div>
                     </div>
                     <div class="col-md-3">
-                        <select ng-model="vm.table.filter.state"
+                        <select ng-model="vm.table.filter.c"
                                 class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                ng-class="{'edited':vm.table.filter.c>0}" ng-options="m.id as m.name for m in vm.cate.c"></select>
                         <div class="form-control-focus"> </div>
                     </div>
                 </div>
             </div>
-            <div class="col-xs-3">
-                <div class="form-group form-md-line-input">
-                    <label class="col-md-4 control-label">分类</label>
-                    <div class="col-md-8">
-                        <select ng-model="vm.table.filter.cates"
-                                class="form-control edited" ui-validate="'$value>0'"
-                                ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.cates"></select>
-                        <div class="form-control-focus"> </div>
-                    </div>
-                 
-                </div>
-            </div>
-            <div class="col-xs-3">
+         
+            <div class="col-xs-4">
                 <div class="form-group form-md-line-input has-info">
                     <div class="input-group input-group-sm">
                         <div class="input-group-control">
@@ -74,7 +63,7 @@
 
         </div>
         <div class="row">
-            <table st-table="vm.table.data" class="table table-striped">
+            <table st-table="vm.table.rows" class="table table-striped">
                 <thead>
                     <tr>
                         <th st-sort="a">成就名称</th>
@@ -90,7 +79,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.data">
+                    <tr st-select-row="row" st-select-mode="multiple" ng-repeat="row in vm.table.rows">
                         <td>{{row.a}}</td>
                         <td>{{row.b}}</td>
                         <td>{{row.c}}</td>
@@ -101,9 +90,6 @@
                             <button type="button" ng-click="vm.modify(row)" class="btn btn-sm btn-default">
                                 修改
                             </button>
-                            <button type="button" ng-click="vm.low(row)" class="btn btn-sm btn-warning">
-                                下架
-                            </button>
                             <button type="button" ng-click="vm.delete(row)" class="btn btn-sm btn-danger">
                                 删除
                             </button>
@@ -112,7 +98,7 @@
                 </tbody>
                 <tfoot>
                     <tr>
-                        <td colspan="7">
+                        <td colspan="10">
                             <div pagination conf="vm.table.pageConfig"></div>
                         </td>
                     </tr>
