--- a/src/Trace/views/achievement/medal/modify.html
+++ b/src/Trace/views/achievement/medal/modify.html
@@ -3,8 +3,8 @@
         <ul class="page-breadcrumb">
             <li>
                 <i class="fa fa-hand-o-right"></i>
-                <a ng-if="!vm.product.id" href="#">添加成就</a>
-                <a ng-if="vm.product.id" href="#">编辑成就: {{vm.product.title}}</a>
+                <a ng-if="!vm.achi.id" href="#">添加成就</a>
+                <a ng-if="vm.achi.id" href="#">编辑成就: {{vm.achi.name}}</a>
             </li>
         </ul>
     </div>
@@ -16,8 +16,8 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-4 control-label">成就名称</label>
                             <div class="col-md-8">
-                                <input type="text" class="form-control" ng-class="{'edited':vm.product.title}" placeholder="成就名称"
-                                       required ng-model="vm.product.title">
+                                <input type="text" class="form-control" ng-class="{'edited':vm.achi.name}" placeholder="成就名称"
+                                       required ng-model="vm.achi.name">
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
@@ -27,8 +27,8 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-4 control-label">系列名称</label>
                             <div class="col-md-8">
-                                <input type="text" class="form-control" ng-class="{'edited':vm.product.title}" placeholder="系列名称"
-                                       required ng-model="vm.product.title">
+                                <input type="text" class="form-control" ng-class="{'edited':vm.achi.category_name}" placeholder="系列名称"
+                                       required ng-model="vm.achi.category_name">
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
@@ -37,8 +37,8 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-4 control-label">达成条件</label>
                             <div class="col-md-8">
-                                <input type="text" class="form-control" ng-class="{'edited':vm.product.title}" placeholder="达成条件"
-                                       required ng-model="vm.product.title">
+                                <input type="text" class="form-control" ng-class="{'edited':vm.achi.finish}" placeholder="达成条件"
+                                       required ng-model="vm.achi.finish">
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
@@ -50,8 +50,8 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-4 control-label">积分</label>
                             <div class="col-md-8">
-                                <input type="text" class="form-control" ng-class="{'edited':vm.product.title}" placeholder="积分"
-                                       required ng-model="vm.product.title">
+                                <input type="number" class="form-control" ng-class="{'edited':vm.achi.integration}" placeholder="积分"
+                                       required ng-model="vm.achi.integration">
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
@@ -61,8 +61,8 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-4 control-label">成就值</label>
                             <div class="col-md-8">
-                                <input type="text" class="form-control" ng-class="{'edited':vm.product.title}" placeholder="成就值"
-                                       required ng-model="vm.product.title">
+                                <input type="number" class="form-control" ng-class="{'edited':vm.achi.achievement_val}" placeholder="成就值"
+                                       required ng-model="vm.achi.achievement_val">
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
@@ -71,8 +71,8 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-4 control-label">称号</label>
                             <div class="col-md-8">
-                                <input type="text" class="form-control" ng-class="{'edited':vm.product.title}" placeholder="称号"
-                                       required ng-model="vm.product.title">
+                                <input type="text" class="form-control" ng-class="{'edited':vm.achi.designation}" placeholder="称号"
+                                       required ng-model="vm.achi.designation">
                                 <div class="form-control-focus"> </div>
                             </div>
                         </div>
@@ -84,9 +84,9 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-4 control-label">系列</label>
                             <div class="col-md-8">
-                                <select ng-model="vm.table.filter.state"
-                                        class="form-control edited" ui-validate="'$value>0'"
-                                        ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                <select ng-model="vm.achi.category1"
+                                        class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(1)"
+                                        ng-class="{'edited':vm.achi.category1>0}" ng-options="m.id as m.name for m in vm.cate.a"></select>
                                 <div class="form-control-focus"> </div>
                             </div>
 
@@ -95,9 +95,9 @@
                     <div class="col-xs-4">
                         <div class="form-group form-md-line-input">
                             <div class="col-md-12">
-                                <select ng-model="vm.table.filter.state"
-                                        class="form-control edited" ui-validate="'$value>0'"
-                                        ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                <select ng-model="vm.achi.category2"
+                                        class="form-control edited" ui-validate="'$value>0'" ng-change="vm.cate.change(2)"
+                                        ng-class="{'edited':vm.achi.category2>0}" ng-options="m.id as m.name for m in vm.cate.b"></select>
                                 <div class="form-control-focus"> </div>
                             </div>
 
@@ -106,9 +106,9 @@
                     <div class="col-xs-4">
                         <div class="form-group form-md-line-input">
                             <div class="col-md-12">
-                                <select ng-model="vm.table.filter.state"
+                                <select ng-model="vm.achi.category3"
                                         class="form-control edited" ui-validate="'$value>0'"
-                                        ng-class="{'edited':vm.model.type>0}" ng-options="m.id as m.name for m in vm.filter.states"></select>
+                                        ng-class="{'edited':vm.achi.category3>0}" ng-options="m.id as m.name for m in vm.cate.c"></select>
                                 <div class="form-control-focus"> </div>
                             </div>
 
@@ -121,15 +121,15 @@
                         <div class="form-group form-md-line-input">
                             <label class="col-md-6 control-label">商城购买按钮</label>
                             <div class="col-md-6">
-                                <div ng-file-select="vm.file.onFileSelect($files)"
+                                <div ng-file-select="vm.file.onFileSelect($files,1)"
                                      data-multiple="vm.file.multiple" title="选择图片"
                                      onclick="this.value = null"
                                      class="btn btn-upload">点击上传图片</div>
-                                <ol>
+                                <!--<ol>
                                     <li ng-repeat="(k,v) in vm.file.selectFiles">
                                         {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
                                     </li>
-                                </ol>
+                                </ol>-->
                             </div>
                         </div>
                     </div>
@@ -151,7 +151,7 @@
                             <div class="md-radio-inline">
                                 <div class="md-radio">
                                     <input type="radio" id="radio6" name="radio2" class="md-radiobtn" value="0" checked
-                                           ng-model="vm.product.type">
+                                           ng-model="vm.achi.is_group">
                                     <label for="radio6">
                                         <span></span>
                                         <span class="check"></span>
@@ -160,7 +160,7 @@
                                 </div>
                                 <div class="md-radio">
                                     <input type="radio" id="radio7" name="radio2" class="md-radiobtn" value="1"
-                                           ng-model="vm.product.type">
+                                           ng-model="vm.achi.is_group">
                                     <label for="radio7">
                                         <span></span>
                                         <span class="check"></span>
@@ -172,7 +172,7 @@
 
                     </div>
                 </div>
-                <div ng-if="vm.product.type==1" class="row">
+                <div ng-if="vm.achi.is_group==1" class="row">
                     <div class="tabbable-line">
                         <ul class="nav nav-tabs">
                             <li style="float: right" class="active">
@@ -226,7 +226,7 @@
                     <div class="col-xs-4"></div>
                     <div class="col-xs-4">
                         <div class="tiles">
-                            <div class="tile bg-grey" ng-file-select="vm.file.onFileSelect($files)" data-multiple="vm.file.multiple" onclick="this.value = null">
+                            <div class="tile bg-grey" ng-file-select="vm.file.onFileSelect($files,2)" data-multiple="vm.file.multiple" onclick="this.value = null">
                                 <div class="tile-body">
                                     <i class="fa fa-cloud-upload"></i>
                                 </div>
@@ -235,17 +235,11 @@
                                     <div class="number"> 170x170 </div>
                                 </div>
                             </div>
-                            <ol>
-                                <li ng-repeat="(k,v) in vm.file.selectFiles">
-                                    {{v.file.name}} ----- {{v.progress.p}}% <a href="#" ng-click="vm.file.abort(k)">X</a>
-                                </li>
-                            </ol>
+                          
                         </div>
                     </div>
                     <div class="col-xs-4"></div>
-
                 </div>
-                <div ueditor id="Container" config="{{vm.config }}"></div>
             </div>
 
             <div class="modal-footer">
